--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ skie = "0.6.2"
 spotless = "6.19.0"
 atomicfu = "0.23.1"
 dataStoreVersion = "1.1.1"
+google-maps = "18.0.2"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -73,6 +74,8 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 okio = "com.squareup.okio:okio:3.9.0"
 skie-annotations = { module = "co.touchlab.skie:configuration-annotations", version.ref = "skie" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
+google-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "google-maps" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
