--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ google-maps = "18.0.2"
 lifecycleRuntimeKtx = "2.8.0"
 composeBom = "2023.08.00"
 navigationCompose = "2.6.0"
+composeMaps = "4.4.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -84,7 +85,7 @@ androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
-
+compose-maps = {group="com.google.maps.android", name="maps-compose", version.ref = "composeMaps"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
