--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ local.properties
 xcuserdata
 /androidApp/google-services.json
 /androidApp/src/main/res/values/google_maps_api.xml
+/androidApp/src/main/res/values/facebook_api.xml
